8210066: [JVMCI] iterateFrames uses wrong GrowableArray API for appending

Reviewed-by: dlong, twisti